--- a/index.html
+++ b/index.html
@@ -6,12 +6,163 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/81b6252507.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    test
+    <!-- Header Start -->
+    <header>
+
+    </header>
+    <!-- Header end -->
+    <main>
+        <!-- Start Top player & top blog -->
+        <section class="container">
+            <h2 class="section-title">Top Player</h2>
+            <div class="top-players">
+                <!-- .player*6>img[src="images/players/player-$.png"]+h3{Player-$} -->
+
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3 class="player-name">John Smith</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h3 class="player-name">Pro Rasel</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h3 class="player-name">Shajedul Karim</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h3 class="player-name">Maruf Ahmed</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h3 class="player-name">Mujahid</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h3 class="player-name">Player-6</h3>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thamnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                            <p class="blog-author">By <a target="_blank" href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thamnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet:
+                                list vs grids</h3>
+                            <p class="blog-author">By <a target="_blank" href="">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thamnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips
+                                for interface design</h3>
+                            <p class="blog-author">By <a target="_blank" href="">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thamnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is
+                                copied</h3>
+                            <p class="blog-author">By <a target="_blank" href="">Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- End Top player & top blog -->
+        <!------------------------------------------
+             start Lates Course 
+            --------------------------------->
+        <section class="container">
+            <h2 class="section-title">Lates Course</h2>
+            <div class="courses">
+                <!-------------------------- first course ------------------------------>
+                <div class="course">
+                    <div class="course-bannar">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+
+                        <span class="gold-star">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid   fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                            <span class="gray-star"><i class="fa-solid fa-star"></i></span>
+                        </span>
+                        <span class="rate">4.5</span>
+                        <span class="time"><i class="fa-regular fa-clock"></i> 01.30 hr</span>
+                    </div>
+                </div>
+                <!-- ----------------------second course ------------------->
+                <div class="course">
+                    <div class="course-bannar">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                        <p class="course-author">Walter Scott.</p>
+
+                        <span class="gold-star">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid   fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                            <span class="gray-star"><i class="fa-solid fa-star"></i></span>
+                        </span>
+                        <span class="rate">4.5</span>
+                        <span class="time"><i class="fa-regular fa-clock"></i> 01.20 hr</span>
+                    </div>
+                </div>
+                <!---------------------------third course ------------------------------>
+                <div class="course">
+                    <div class="course-bannar">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The Complete JavaScript Course 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+
+                        <span class="gold-star">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid   fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                            <span class="gray-star"><i class="fa-solid fa-star"></i></span>
+                        </span>
+                        <span class="rate">4.5</span>
+                        <span class="time"><i class="fa-regular fa-clock"></i> 01.30 hr</span>
+                    </div>
+                </div>
+
+            </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
