--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 <body>
     <!-- Header Start -->
     <header>
+        <nav>
+            <span>
+                <a href=""><img class="logo" src="images/icons/logo.png" alt=""></a>
+                <a target="_blank" href="">Idea</a>
+            </span>
+            <span>
+                <a target="_blank" href="">Home</a>
+                <a target="_blank" href="">About</a>
+                <a target="_blank" href="">Works</a>
+                <a target="_blank" href=""><img class="logo" src="images/icons/profile.png" alt=""></a>
 
+            </span>
+        </nav>
     </header>
     <!-- Header end -->
     <main>
